--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -28,7 +28,9 @@
                 <button type="submit" class="btn btn-default">搜索</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">登录</a></li>
+                <li>
+                    <a href="https://github.com/login/oauth/authorize?client_id=dd8ead2d4448fd960a87&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a>
+                </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">我<span class="caret"></span></a>
